# ckb-transaction-cobuild-poc

./: Cargo.toml  Makefile  README.md  capsule.toml
.github/workflows/: rust.yml
ckb-transaction-cobuild/: Cargo.toml  README.md
ckb-transaction-cobuild/src/: blake2b.rs  error.rs  lazy_reader.rs  lib.rs  log.rs
ckb-transaction-cobuild/src/schemas/: basic.rs  mod.rs  top_level.rs
ckb-transaction-cobuild/src/schemas2/: basic.rs  blockchain.rs  mod.rs  top_level.rs
ckb-typed-message/: Cargo.toml  README.md
ckb-typed-message/src/: lib.rs
ckb-typed-message/src/schemas/: basic.rs  blockchain.rs  mod.rs  spore.rs  top_level.rs
contracts/always-success/: Cargo.toml
contracts/always-success/src/: main.rs
contracts/ckb-typed-message/src/schemas/: basic.rs  mod.rs  top_level.rs
contracts/transaction-cobuild-lock-demo/: Cargo.toml  README.md
contracts/transaction-cobuild-lock-demo/src/: entry.rs  error.rs
contracts/transaction-cobuild-otx-lock-demo/: Cargo.toml  README.md
contracts/transaction-cobuild-otx-lock-demo/src/: entry.rs  error.rs
contracts/transaction-cobuild-type-demo/: Cargo.toml  README.md
contracts/transaction-cobuild-type-demo/src/: entry.rs  error.rs
contracts/typed-message-lock-demo/: Cargo.toml  README.md
contracts/typed-message-lock-demo/src/: entry.rs  error.rs
dapp/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
dapp/src/: .index.tsx.swp  .lib.ts.swp  binCluster  binSpore  deploy.sh  deploy.toml  index.html  index.tsx  lib.ts  rawCreateImmortalSpore.ts  rawCreatePrivateCluster.ts  rawCreateSpore.ts  rawCreateSporeWithCluster.ts  rawTransferSpore.ts  rawWallet.ts  skCreateImmortalSpore.ts  skCreatePrivateCluster.ts  skCreateSpore.ts  skCreateSporeWithCluster.ts  skTransferSpore.ts  skWallet.ts  tmBuild.ts  tmConfig.ts  tmCreateSpore.ts  tmMolecule.ts  tmQuery.ts  tmTransferSpore.ts  tmTxDump.json  tmWallet.ts  txDump.ts
docs/: lock-script-migration.md  migration.md  typed-message-migration.md
schemas/: basic.mol  blockchain.mol  spore.mol  top_level.mol
tests/: Cargo.toml
tests/src/: lib.rs  test_otx.rs  tests.rs  tx.rs
