[workspace]
members = ["ckb-transaction-cobuild", "contracts/transaction-cobuild-lock-demo", "contracts/transaction-cobuild-type-demo", "contracts/transaction-cobuild-otx-lock-demo", "contracts/always-success"]
exclude = ["tests"]
resolver = "2"

[profile.release]
overflow-checks = true
opt-level = 3
panic = 'abort'
strip = true
lto = true
debug-assertions = true

[profile.dev]
strip = true
opt-level = 1
debug = false
panic = 'abort'
debug-assertions = true

[patch.crates-io]
molecule = { git = "https://github.com/XuJiandong/molecule.git", rev = "785a309" }
