[package]
name = "transaction-cobuild-type-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-transaction-cobuild = { path = "../../ckb-transaction-cobuild" }
ckb-std = { version = "0.14.3" }
