[package]
name = "typed-message-lock-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-typed-message = { path = "../../ckb-typed-message" }
ckb-std = { version = "0.14.3" }
molecule = { version = "0.7.5", default-features = false }
blake2b-ref = "0.3.1"
ckb-auth-rs = { git = "https://github.com/nervosnetwork/ckb-auth.git", rev="df6e9ef"}
